2003-09-12  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (Executable._MakeCloseOnExec): Deal with
	missing fcntl.FD_CLOEXEC.

2003-09-09  Stefan Seefeld  <seefeld@sympatico.ca>

	* setup.py: Factor out commands into ...
	* qmdist/command/build_doc.py: ...this
	* qmdist/command/install_data.py: ...and this.
	* qmdist/__init__.py: New file.
	* qmdist/command/__init__.py: New file.
        * MANIFEST.in: Provide file list for source distribution.
	
2003-09-07  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (cStringIO): Do not import.
	(StringIO): Import.
	(tokenize): Import.
	(Field.FormatValueAsText): Use StringIO.
	(Field.ParseTextValue): Improve documentation.
	(SetField.FormatValueAsText): Make output match format expected 
	by ...
	(SetField.ParseTextField): ... this new method.
	* qm/test/cmdline.py (QMTest.attribute_option_spec): Generalize
	help text.
	* share/diagnostics/common.txt (invalid set value): New message.

	* NEWS: Mention correction of critical resource defect.

2003-09-05  Mark Mitchell  <mark@codesourcery.com>

	* qm/qm.sh (PYTHONPATH): Break "export PTYHONPATH=..." into two
	statements.

2003-08-29  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/target.py (Target.__init__): Do not set __resources.
	(Target.Start): Initialize __resources.
	(Target.Stop): Remove entries created by Target.Start.

	* GNUmakefile.in (check): Remove dependency on check-rsh.

	* README: Mention Win32 extensions and update reference to ZPL.
	* qm/external/DocumentTemplate/LICENSE.txt: New file.
	
2003-08-28  Stefan Seefeld  <stefan.seefeld@orthosoft.ca>

	* setup.py: Make documentation compliant with qmtest's standard.
	(qm_build_doc): Tidy up the code and make it more clear.
	(qm_build_doc): Use os.path.join and os.path.normpath for better
	portability.

2003-08-27  Stefan Seefeld  <seefeld@sympatico.ca>

	* setup.py: Add build_doc command.

2003-08-27  Stefan Seefeld  <seefeld@sympatico.ca>

	* setup.py: New file.